# usv-autonomy

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
docs/architecture/graphs/: frames_2026-07-20_09.59.05.gv
usv_ws/src/usv_bringup/: package.xml  package.xml.bak  setup.py
usv_ws/src/usv_control/: package.xml  package.xml.bak  setup.py  setup.py.bak
usv_ws/src/usv_control/usv_control/: thruster_test.py
usv_ws/src/usv_interfaces/: CMakeLists.txt  package.xml  package.xml.bak
usv_ws/src/usv_mission/: package.xml  package.xml.bak  setup.cfg  setup.py
usv_ws/src/usv_msgs/: CMakeLists.txt  package.xml  package.xml.bak
usv_ws/src/usv_navigation/: package.xml  package.xml.bak  setup.py
usv_ws/src/usv_perception/: package.xml  package.xml.bak  setup.cfg  setup.py
